test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-app
spec:
  replicas: 2 # Запустим две копии приложения на разных воркерах
  selector:
    matchLabels:
      app: my-first-app
  template:
    metadata:
      labels:
        app: my-first-app
    spec:
      containers:
      - name: web-server
        # Укажите адрес вашего образа из Harbor
        image: 192.168.3.149:80/devops-lab/test-image:v28
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: harbor-registry-secret # Тот самый секрет, который мы создали ранее
