services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  selector:
    app: my-first-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001 # Порт, по которому приложение будет доступно снаружи
